# ChangeLog for media-libs/xine-lib
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.197 2005/03/17 10:13:14 swegener Exp $

  17 Mar 2005; Sven Wegener <swegener@gentoo.org> xine-lib-1.0.ebuild:
  Fixed invalid atoms in *DEPEND.

  17 Mar 2005; Chris White <chriswhite@gentoo.org> xine-lib-1.0.ebuild:
  Specifically targeted latest ffmpeg as dep target. Regression of ppc64.
  dostrow and corsair are aware of this.

  01 Mar 2005; Chris White <chriswhite@gentoo.org> xine-lib-1.0.ebuild:
  Fixed bug #82571.  Also added in external ffmpeg support.

  17 Feb 2005; Markus Rothe <corsair@gentoo.org> xine-lib-1.0.ebuild:
  Stable on ppc64

  08 Feb 2005; Chris White <chriswhite@gentoo.org> xine-lib-1.0.ebuild:
  Fixed bug #76090 (aalib and libcaca hard links).

  08 Feb 2005; Chris White <chriswhite@gentoo.org> xine-lib-1.0.ebuild,
  xine-lib-1_rc6-r1.ebuild, xine-lib-1_rc8-r1.ebuild:
  Removing symbol stripping as it appears to be the cause of a few ffmpeg
  related packages crashing.

  15 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> xine-lib-1.0.ebuild,
  xine-lib-1_rc6-r1.ebuild, xine-lib-1_rc8-r1.ebuild:
  changed X dependency to virtual/x11. fixes bug #78046.

*xine-lib-1_rc8-r1 (07 Jan 2005)

  07 Jan 2005; Chris White <chriswhite@gentoo.org> xine-lib-1_rc8-r1.ebuild:
  xv support is patched in xine-lib, and it no longer requires the use flag.
  Removing that as well as the logic, as the logic breaks stuff.

  06 Jan 2005; Jeremy Huddleston <eradicator@gentoo.org>
  -xine-lib-1_rc5-r3.ebuild, -xine-lib-1_rc6.ebuild, -xine-lib-1_rc7.ebuild,
  -xine-lib-1_rc8.ebuild:
  Purging insecure versions from the tree.

  05 Jan 2005; Jeremy Huddleston <eradicator@gentoo.org>
  xine-lib-1_rc6-r1.ebuild:
  Stable sparc for security fix.

*xine-lib-1_rc8 (05 Jan 2005)

  05 Jan 2005; Jeremy Huddleston <eradicator@gentoo.org>